--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,17 @@
             </intent-filter>
         </receiver>
 
+        <service
+            android:name="com.ddanddan.watch.presentation.service.DataLayerListenerService"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.google.android.gms.wearable.DATA_CHANGED" />
+                <data android:scheme="wear" android:host="*" android:path="/access_token" />
+            </intent-filter>
+        </service>
+
+
+
     </application>
     <queries>
         <package android:name="com.google.android.wearable.healthservices" />
