--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -27,6 +27,7 @@ androidxWorkVersion = "2.9.1"
 # Compose Versions
 composeVersion = "1.7.3"
 composeCompilerVersion = "1.5.2"
+composeRuntimeVersion = "1.4.0"
 
 # Google Play & Health Services
 playServicesWearableVersion = "18.2.0"
@@ -108,6 +109,8 @@ compose-material-icons-extended = { module = "androidx.compose.material:material
 compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "composeVersion" }
 compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "composeVersion" }
 compose-compiler = { module = "androidx.compose.compiler:compiler", version.ref = "composeCompilerVersion" }
+compose-runtime = { module = "androidx.compose.runtime:runtime", version.ref = "composeRuntimeVersion" }
+
 wear-compose-foundation = { module = "androidx.wear.compose:compose-foundation", version.ref = "androidxWearComposeVersion" }
 wear-compose-material = { module = "androidx.wear.compose:compose-material", version.ref = "androidxWearComposeVersion" }
 
